--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
       type="text/css"
     />
     <style type="text/css">
+      #container {
+        margin: 0 100px 0 0;
+      }
+    </style>
+
+    <style type="text/css">
       #mynetwork {
         width: 600px;
         height: 400px;
@@ -23,9 +29,10 @@
   </head>
 
   <body>
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col mynetwork" id="network"></div>
+    <div class="container">
+      <h1 class="display-1">MASTI Simulation</h1>
+      <div class="row" id="container">
+        <div class="col" id="network"></div>
         <div class="col" id="visualization"></div>
       </div>
     </div>
