--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </head>
 
   <body>
-    <div class="container">
+    <div class="container-fluid">
       <h1 class="display-1">MASTI Simulation</h1>
       <div class="row" id="container">
         <div class="col" id="network"></div>
