add rxjs add timer add variable delay time

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
   <body>
     <div class="container-fluid">
       <h1 class="display-1">MASTI Simulation</h1>
+      <h6 id="expiration-timer"></h6>
       <div class="row" id="container">
         <div class="col" id="network"></div>
         <div class="col" id="visualization"></div>
