add graph degree add simulation screen

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
     <div class="container-fluid">
       <h1 class="display-1">MASTI Simulation</h1>
       <h6 id="expiration-timer"></h6>
+      <h6 id="max-in-degree"></h6>
+      <h6 id="max-out-degree"></h6>
       <div class="row" id="container">
         <div class="col" id="network"></div>
         <div class="col" id="visualization"></div>
