add generate button add auto spreading

--- a/index.html
+++ b/index.html
@@ -27,10 +27,18 @@
       <h6 id="expiration-timer"></h6>
       <h6 id="max-in-degree"></h6>
       <h6 id="max-out-degree"></h6>
+      <button type="button" class="btn btn-light" id="generate">Generate</button>
       <button type="button" class="btn btn-light" id="restore">Restore</button>
       <button type="button" class="btn btn-light" id="dump">Dump</button>
       <button type="button" class="btn btn-primary" id="publish">Publish</button>
       <button type="button" class="btn btn-primary" id="spread">Spread</button>
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="checkbox" value="" id="cbAutoSpread">
+        <label class="form-check-label" for="defaultCheck1">
+          Auto
+        </label>
+      </div>
+
       <div class="row" id="container">
         <div class="col" id="network"></div>
         <div class="col" id="visualization"></div>
