--- a/index.html
+++ b/index.html
@@ -81,20 +81,20 @@
           </div>
           <div class="col-md-3">
             <label for="zia">Zia: Mean time in IA state</label>
-            <input type="number" class="form-control" id="zia" value="25">
+            <input type="number" class="form-control" id="zia" value="50">
           </div>
         </div>
 
         <div class="form-row form-group">
           <div class="input-group mb-3 col-md-4" >
-            <input type="number" id="publishCount" class="form-control" aria-label="no. publications" aria-describedby="publish" value="1">
+            <input type="number" id="publishCount" class="form-control" aria-label="no. publications" aria-describedby="publish" value="10">
             <div class="input-group-append">
               <button class="btn btn-outline-primary" type="button" id="publish">Publish</button>
             </div>
           </div>
           <button type="button" class="btn btn-danger" id="spread">Spread</button>
           <div class="form-check form-check-inline">
-            <input class="form-check-input" type="checkbox" value="" id="cbAutoSpread">
+            <input class="form-check-input" type="checkbox" checked value="" id="cbAutoSpread">
             <label class="form-check-label" for="defaultCheck1">
               Auto
             </label>
