add cbDirected write about problem withit

--- a/index.html
+++ b/index.html
@@ -95,8 +95,14 @@
           <button type="button" class="btn btn-danger" id="spread">Spread</button>
           <div class="form-check form-check-inline">
             <input class="form-check-input" type="checkbox" checked value="" id="cbAutoSpread">
-            <label class="form-check-label" for="defaultCheck1">
+            <label class="form-check-label" for="cbAutoSpread">
               Auto
+            </label>
+          </div>
+          <div class="form-check form-check-inline">
+            <input class="form-check-input" type="checkbox" checked value="" id="cbDirected">
+            <label class="form-check-label" for="cbDirected">
+              Directed
             </label>
           </div>
           <button type="button" class="btn btn-light" id="reset">Reset</button>
