add nodeEdge1000 and nodeEdge1000NoGrape fix performant generation

--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
         <div class="form-row form-group">
           <div class="btn-group" role="group" aria-label="Basic example">
             <button type="button" class="btn btn-secondary" id="generate">Generate</button>
-            <button type="button" class="btn btn-light" id="restore">Restore</button>
+            <button type="button" class="btn btn-light" id="restore1000">Restore 1000 nodes</button>
+            <button type="button" class="btn btn-light" id="restore1000NoGrape">Restore 1000 nodes w/o grape</button>
             <button type="button" class="btn btn-light" id="dump">Dump</button>
           </div>
         </div>
@@ -127,9 +128,9 @@
           <button class="btn btn-outline-primary" type="button" id="btnFetchNetwork">Fetch network</button>
         </div>
         <div class="form-check form-check-inline">
-          <input class="form-check-input" checked type="checkbox" value="" id="cbUpdateNetwork">
-          <label class="form-check-label" for="cbUpdateNetwork">
-            Allow Updates
+          <input class="form-check-input" checked type="checkbox" value="" id="cbFollowUpdates">
+          <label class="form-check-label" for="cbFollowUpdates">
+            Folllow Updates
           </label>
         </div>
         <div class="form-check form-check-inline">
