fix building adjacent list

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           </div>
           <div class="col-md-3">
             <label for="tau">τ(tau): Time to immunization</label>
-            <input type="number" class="form-control" id="tau" value="100" max="1000" min="1" step="1">
+            <input type="number" class="form-control" id="tau" value="200" max="1000" min="1" step="1">
           </div>
           <div class="col-md-3">
             <label for="zhq">Zhq: Mean time in HQ state</label>
@@ -90,7 +90,7 @@
           </div>
           <div class="col-md-3">
             <label for="zia">Zia: Mean time in IA state</label>
-            <input type="number" class="form-control" id="zia" value="25">
+            <input type="number" class="form-control" id="zia" value="100">
           </div>
         </div>
 
@@ -123,7 +123,7 @@
           <div class="col-md-6" id="network"></div>
           <div class="col-md-6" id="visualization"></div>
       </div>
-      <div class="form-row form-group">
+      <div class="my-3 form-row form-group">
         <div class="input-group-append">
           <button class="btn btn-outline-primary" type="button" id="btnFetchNetwork">Fetch network</button>
         </div>
@@ -131,12 +131,6 @@
           <input class="form-check-input" checked type="checkbox" value="" id="cbFollowUpdates">
           <label class="form-check-label" for="cbFollowUpdates">
             Folllow Updates
-          </label>
-        </div>
-        <div class="form-check form-check-inline">
-          <input class="form-check-input" checked type="checkbox" value="" id="cbSmooth">
-          <label class="form-check-label" for="cbSmooth">
-            Smooth
           </label>
         </div>
         <div class="form-check form-check-inline">
