change title text

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 
   <body>
     <div class="container-fluid">
-      <h1 class="display-1">MASTI Simulation</h1>
+      <h1 class="display-1">Proof-of-Time Authentication</h1>
+      <h3 class="display-3">Graph Infection Simulation</h3>
       <form>
         <div class="form-row">
           <div class="form-group col-md-2">
