add grape generators fix imports in webapp

--- a/index.html
+++ b/index.html
@@ -73,8 +73,10 @@
         <div class="form-row form-group">
           <div class="btn-group" role="group" aria-label="Basic example">
             <button type="button" class="btn btn-secondary" id="generate">Generate</button>
-            <button type="button" class="btn btn-light" id="restore1000">Restore 1000 nodes</button>
-            <button type="button" class="btn btn-light" id="restore1000NoGrape">Restore 1000 nodes w/o grape</button>
+            <button type="button" class="btn btn-light" id="restore1000">Restore 1000 nodes prop dup</button>
+            <button type="button" class="btn btn-light" id="restore1000NoGrape">Restore 1000 nodes prop dup w/o grape</button>
+            <button type="button" class="btn btn-light" id="restore1000webOfTrust">Restore 1000 nodes web of trust</button>
+            <button type="button" class="btn btn-light" id="restoreGrape">Restore grape</button>
             <button type="button" class="btn btn-light" id="dump">Dump</button>
           </div>
         </div>
